[project]
name = "tinyrag"
version = "0.1.0"
description = "Tiny RAG with Zvec"
requires-python = ">=3.10"
dependencies = [
    "zvec==0.2.1",
]

[tool.uv.sources]
zvec = { path = "wheels/zvec-0.2.1-cp312-cp312-manylinux_2_28_x86_64.whl" }

[tool.hatch.build.targets.wheel]
packages = ["tinyrag"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
